# PROYECTOFINAL-IA-INFRA

./: .gitignore  README.md
docs/: 02-motor.md
motor/: CMakeLists.txt
motor/src/: bench.cpp  board.cpp  board.h  engine.cpp  engine.h
motor/tests/: suite.txt
